# vfftpack-cmake

./: CMakeLists.txt  README.md  doc  vcosqb.f  vcosti.f  vrfftf.f  vrffti.f  vsint.f  vsinti.f
src/: pimach.f  vcosqf.f  vcosqi.f  vcost.f  vrfftb.f  vsinqb.f  vsinqf.f  vsinqi.f
